Modified index and movie html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
       }
     }
 
+    @media screen and (max-width : 500px){
+      .social{
+        display: flex;
+        justify-content: center;
+      }
+    }
+
     .col-lg-3{
       margin-top: 20px;
     }
@@ -190,13 +197,6 @@
         </div>
       </nav>
     </header>
-
-    <!-- Breadcrumbs -->
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item" ><a style="text-decoration: none; color: white;" href="index.html">Home</a></li>
-      </ol>
-    </nav>
 
     <!-- Alert -->
     <div class="alert alert-success alert-dismissible fade show" role="alert" style="border-radius: 40px;" role="alert">
@@ -668,7 +668,7 @@
             </svg> risdodesu@gmail.com</span> 
           </div>
 
-          <div class="social d-flex mt-3">
+          <div class="d-flex mt-3">
             <h1 style="color: orange;">Our Social Media</h1>
           </div>
           <div class="social d-flex gap-3">
@@ -685,7 +685,7 @@
 
         </div>
 
-        <div class="col-12 col-lg-6 mt-3">
+        <div class="center col-12 col-lg-6 mt-3">
           <h1 style="color: orange;">Contact Us</h1>
           <div>
             <input type="text" class="form-control" placeholder="Enter your name here" style="margin-bottom: 10px;">
