--- a/movie.html
+++ b/movie.html
@@ -39,6 +39,13 @@
         background-color: #404258;
         }
 
+        @media screen and (max-width : 500px){
+          .social{
+            display: flex;
+            justify-content: center;
+          }
+        }
+
         @media screen and (max-width : 991px){
           .col-md-4{
               margin-bottom: 20px;
@@ -683,7 +690,7 @@
               </svg> risdodesu@gmail.com</span> 
             </div>
   
-            <div class="social d-flex mt-3">
+            <div class="d-flex mt-3">
               <h1 style="color: orange;">Our Social Media</h1>
             </div>
             <div class="social d-flex gap-3">
